snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
9cadc8ef39de4394bf49fcf9996208f4